--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Editorial Sone",
-  "name": "Editorial Sone by 7RG",
+  "short_name": "Editorials One",
+  "name": "Editorials One by 7RG",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
